{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 3,
  "lineage": "c0d04984-aba0-a478-62e5-45c3dfe52185",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:105417737192:security-group/sg-0babfbc14dfc44c55",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0babfbc14dfc44c55",
            "ingress": [],
            "name": "my-sg",
            "name_prefix": "",
            "owner_id": "105417737192",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0628e3a2768b0dbf6"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:105417737192:security-group-rule/sgr-00ba239ed47c13683",
            "cidr_ipv4": "54.243.220.59/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-00ba239ed47c13683",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0babfbc14dfc44c55",
            "security_group_rule_id": "sgr-00ba239ed47c13683",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.my-sg",
            "data.terraform_remote_state.eip"
          ]
        }
      ]
    }
  ]
}